[metadata]
name = plotnine_phd_theme
version = 0.0.1
author = Michael Struwig
author_email = mnicstruwig@gmail.com
description = A custom plotnine theme used for my PhD thesis.
long_description = file: README.md
long_description_content = text/markdown
url = None
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    plotnine ==0.8.0
python_requires = >=3.7

[options.packages.find]
where = src
